# semafold

./: .gitignore  CHANGELOG.md  NOTICE  README.md  STABILITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  turboquant_benchmark_report.md  turboquant_paper_validation.py  turboquant_synthetic_kv_benchmark.py
examples/: README.md  turboquant_embedding.py  turboquant_kv_block.py  wire_roundtrip.py
src/semafold/: __init__.py  _version.py  errors.py
tests/: conftest.py
tests/contract/: test_beta_not_root_exported.py  test_core_models_contract.py  test_identity_contract.py  test_json_wire_contract.py  test_packaging_metadata_contract.py  test_passthrough_codec_contract.py  test_public_api_exports.py  test_reserved_modules_absent.py  test_scalar_reference_codec_contract.py  test_source_tree_quality_guards.py  test_turboquant_kv_codec_contract.py  test_turboquant_kv_preview_boundary.py  test_turboquant_mse_codec_contract.py  test_turboquant_prod_codec_contract.py  test_turboquant_root_boundary.py  test_vector_codec_protocol_contract.py  test_vector_decode_contract.py  test_vector_encoding_contract.py  test_vector_request_contract.py
tests/integration/: test_distribution_build_smoke.py  test_examples_smoke.py  test_internal_consumer_roundtrip.py  test_turboquant_kv_attention_proxy.py  test_turboquant_kv_memory_stats.py  test_turboquant_kv_preview_smoke.py  test_turboquant_kv_roundtrip.py  test_turboquant_mse_roundtrip.py  test_turboquant_paper_validation.py  test_turboquant_prod_perf_smoke.py  test_turboquant_prod_roundtrip.py  (+2 more)
(+40 files in other folders)
