[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semafold"
version = "0.1.0"
description = "Phase 1 incubating vector-first compression package with measured accounting and explicit evidence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Mindtro GmbH", email = "team@mindtro.com" }]
dependencies = ["numpy>=1.26"]
keywords = ["compression", "vectors", "quantization", "ai"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.optional-dependencies]
dev = ["build>=1.2", "pyright>=1.1", "pytest>=9"]

[tool.hatch.build]
exclude = [".pytest_cache/**", "**/__pycache__/**", "**/*.py[cod]"]

[tool.hatch.build.targets.wheel]
packages = ["src/semafold"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --tb=short"
testpaths = ["tests"]
xfail_strict = true

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests", "examples", "benchmarks"]
typeCheckingMode = "basic"
